fix scrollbar for paging

--- a/content/css/scrollbar.css
+++ b/content/css/scrollbar.css
@@ -17,17 +17,19 @@
 
 .scrollbar-container {
 	float:right;
-	width:5px;
+	width:6px;
 	height:100%;
 	background-color:transparent;
 	position:relative;
 }
 
 .scrollbar {
-	width:5px;
+	width:6px;
 	background-color:rgba(119,119,119,.2);
 	position:relative;
 	cursor:pointer;
+	border-radius:25px;
+	border: 1px solid transparent;
 }
 
 .scrollbar-selected {
